discussion/kv_engine/155176/155176_rev14_discussion.txt
======================================================================================================================
DESCRIPTION:

MB-46729: Don't use the bucket logger from executor

Remove the binding to the bucket logger from the executor as it
is running in the core.

Change-Id: I984ef9374fb46ea181c38eec01698b82587c5f60

======================================================================================================================
COMMENTS
======================================================================================================================
Author: Trond Norbye
Date: 2021-06-11 08:09:29.000000000
Message: 
Uploaded patch set 14: Patch Set 13 was rebased.
----------------------------------------------------------------------------------------------------------------------
Author: Build Bot
Date: 2021-06-11 09:40:42.000000000
Message: 
Patch Set 14: Verified-1

Build Failed 

http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9762/ : FAILURE

clang-tidy found the following problems:

<pre>
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/configuration.h:179:10: error: "generated_configuration.h" file not found [clang-diagnostic-error]
#include "generated_configuration.h" // NOLINT(*)
         ^
/home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/logger/logger.h:28:10: error: "spdlog/fmt/ostr.h" file not found [clang-diagnostic-error]
#include <spdlog/fmt/ostr.h>
         ^

</pre> ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9762/ )

Compile error at /home/couchbase/jenkins/workspace/kv_engine-clang_tidy-master/kv_engine/engines/ep/src/configuration.h:179:10:
error: "generated_configuration.h" file not found [clang-diagnostic-error]
 ( http://cv.jenkins.couchbase.com/job/kv_engine-clang_tidy-master/9762/ )

http://cv.jenkins.couchbase.com/job/kv_engine-clang_format_9/8357/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-windows-master/36732/ : SUCCESS

http://cv.jenkins.couchbase.com/job/ming-test2/282/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine-clang_analyzer-master/31392/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.ASan-UBSan/job/master/19344/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.macos/job/master/10410/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.threadsanitizer/job/master/11763/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux-CE/job/master/11337/ : SUCCESS

http://cv.jenkins.couchbase.com/job/kv_engine.linux/job/master/11485/ : SUCCESS
----------------------------------------------------------------------------------------------------------------------
Author: Ben Huddleston
Date: 2021-06-11 14:21:54.000000000
Message: 
Patch Set 14: Code-Review+2
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2021-06-11 14:41:09.000000000
Message: 
Patch Set 14: Verified+1

clang-tidy must be confused ...
----------------------------------------------------------------------------------------------------------------------
Author: Trond Norbye
Date: 2021-06-11 14:41:12.000000000
Message: 
Removed Verified-1 by Build Bot <build@couchbase.com>

----------------------------------------------------------------------------------------------------------------------
